  Added a template for a pkg-config .pc file describing libcif.  It is filled
  by the configure script and the resulting .pc file is installed by 'make
  install'.
* Added an RPM spec file
  Added a spec file for building and installing the CIF API software via RPM.
  Both a 'configure' template for the spec file and a copy of the spec file
  itself are included in the misc/ subdirectory.

Version 0.4.1
* Added '-f' fast mode option to cif2_syncheck
  If the -f option is passed to cif2_syncheck then it runs the parser in
  syntax-only mode, with no data-handling callbacks.  This turns out to be
  about 200 times faster (literally), but does not detect duplicate data
  names, frame codes, or block codes.  This option was motivated by the
  example parser provided with cctbx::ucif, which operates exactly the
  same way.
* Added support for SQLite memory-based mode
  Added code protected by conditional-compilation directives to cif.c.  When
  enabled, CIF storage will be handled by SQLite in-memory databases instead
  of SQLite temporary databases.  Enabling this mode provides a parse-speed
  advantage advantage on the order of 35%, but removes automatic spillover
  to the file system.  The CIF API's SQLite form of CIF data is many times
  larger than CIF's native text form, so spillover can be very important.
  The build system intentionally provides no direct support for enabling
  in-memory mode.

Version 0.4.0
* Added CIF 1.1-format output
  Previously, the CIF API could read either CIF 1.1 format or CIF 2.0 format,
  but on the output side, it could write only CIF 2.0 format.  A write option
  has been defined (the first one, though the framework for it already
  existed) to enable users to select CIF 1.1 output.
* Switched to preferring line folding for text-field escaping
  When the trimmed first line of a text field ends with a backslash in
  CIF 2.0 output mode, or when the trimmed first line consists of a single