@@ -185,11 +185,6 @@ int cif_get_api_version(char **version) {
 int cif_create(cif_tp **cif) {
     FAILURE_HANDLING;
     cif_tp *temp;
-#ifdef SQLITE_MEMORY_ONLY
-    U_STRING_DECL(sqlite_memory, ":memory:", 9);
-
-    U_STRING_INIT(sqlite_memory, ":memory:", 9);
-#endif
     if (cif == NULL) return CIF_ARGUMENT_ERROR;
 
     temp = (cif_tp *) malloc(sizeof(cif_tp));
@@ -205,14 +200,22 @@ int cif_create(cif_tp **cif) {
 
                 /*
                  * Open a connection to a temporary SQLite database.  The database will
-                 * use UTF-16 as its default character encoding (and also the function
-                 * requires the filename to be encoded in UTF-16).
+                 * use UTF-8 as its default character encoding (and also the function
+                 * assumes the filename to be encoded in UTF-8).
+                 *
+                 * Although the CIF API uses UTF-16 natively, it turns out that the
+                 * large space savings afforded by UTF-8 usage in the database yields
+                 * also sufficient performance improvement to slightly outweigh the
+                 * cost of transcoding into and out of the database.
                  */
+                && (DEBUG_WRAP2(sqlite3_open_v2(
 #ifdef SQLITE_MEMORY_ONLY
-                && (DEBUG_WRAP2(sqlite3_open16(sqlite_memory, &(temp->db))) == SQLITE_OK)) {
+                        ":memory:",
 #else
-                && (DEBUG_WRAP2(sqlite3_open16(&cif_uchar_nul, &(temp->db))) == SQLITE_OK)) {
+                        "",
 #endif
+                        &(temp->db), SQLITE_OPEN_READWRITE | SQLITE_OPEN_CREATE | SQLITE_OPEN_NOMUTEX
+                        | SQLITE_OPEN_PRIVATECACHE, NULL)) == SQLITE_OK)) {
             int fks_enabled = 0;
 
 #ifdef PERFORM_QUERY_PROFILING
